<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:background="@drawable/shape_search_item">

        <EditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="6dp"
            android:layout_toLeftOf="@id/accept"
            android:background="@color/backgroundPanel"
            android:hint="@string/hint_city"
            android:minHeight="48dp" />

        <ImageView
            android:id="@+id/accept"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/search" />

    </RelativeLayout>

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_black"
        android:text="Москва"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:text="RU" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/roboto_light"
        android:text="Последнее обновление: FR 22/19/2022 14:30" />

    <TextView
        android:id="@+id/tempInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:text="23℃"
        android:textSize="80dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="Пассмурно"
        android:layout_gravity="center"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp">

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:layout_marginStart="32dp"
            android:background="@drawable/shape_item"
            android:paddingLeft="16dp"
            android:paddingTop="24dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/feelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/roboto_light"
                android:text="@string/feels_like"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tempFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/feelsLike"
                android:fontFamily="@font/roboto_bold"
                android:text="15"
                android:textSize="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@drawable/shape_item"
            android:paddingLeft="16dp"
            android:layout_marginEnd="32dp"
            android:paddingTop="24dp"
            android:layout_marginStart="24dp"
            android:paddingRight="16dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/windText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/roboto_light"
                android:text="@string/wind_speed"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/windSpeedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/windText"
                android:fontFamily="@font/roboto_bold"
                android:text="15"
                android:textSize="20dp" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp">

        <ImageView
            android:id="@+id/minTempImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/min_temp_image" />

        <TextView
            android:id="@+id/minTempText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_light"
            android:text="@string/min_temp_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="26"
            android:textAlignment="textEnd"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/maxTempImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/max_temp_image" />

        <TextView
            android:id="@+id/maxTempText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_light"
            android:text="@string/max_temp_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:text="26"
            android:textAlignment="textEnd"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>